--- a/src/app/pages/_layout/components/footer/footer.component.html
+++ b/src/app/pages/_layout/components/footer/footer.component.html
@@ -9,10 +9,10 @@
       >{{ currentYear }} &copy;</span
     >
     <a
-      href="http://ecrin.org"
+      href="https://www.eosc-life.eu/"
       target="_blank"
       class="text-dark-75 text-hover-primary"
-      >ECRIN</a
+      >EOSC-Life</a
     >
   </div>
   <!--end::Copyright-->
@@ -20,44 +20,37 @@
   <!--begin::Nav-->
   <div class="nav nav-dark">
     <a
-      href="https://ecrin.org/"
+      href="https://www.eosc-life.eu/"
       target="_blank"
       class="nav-link pl-0 pr-5"
-      >ECRIN Web site</a
+      >EOSC-Life Web site</a
     >
     <a
-      href="http://ecrin-mdr.online/index.php/Project_Overview"
+      href="#"
       target="_blank"
       class="nav-link pl-0 pr-5"
       >
-      Wiki
+      WP Page
     </a>
     <a
-      href="http://ecrin-mdr.online/index.php/Legal_Diclaimer"
+      href="#"
       target="_blank"
       class="nav-link pl-0 pr-5"
-    >{{'FOOTER.DISCLAIMER' | translate: {Default: 'Disclaimer'} }}
+    >Disclaimer
     </a>
     <a
-      href="http://ecrin-mdr.online/index.php/Sources_and_Contributors"
-      target="_blank"
-      class="nav-link pl-0 pr-5"
-    >
-      {{'FOOTER.DATA-SOURCES' | translate: {Default: 'Sources and Contributors'} }}
-    </a>
-    <a
-      [routerLink]="['/for-developers']"
+      href="#"
       target="_blank"
       class="nav-link pl-0 pr-5"
     >
-      {{'FOOTER.FOR-DEVELOPERS' | translate: {Default: 'For developers'} }}
+      Sources and Contributors
     </a>
     <a
-      href="http://ecrin-mdr.online/index.php/Contact_us"
+      href="#"
       target="_blank"
       class="nav-link pl-0 pr-0"
       >
-      {{'FOOTER.CONTACT' | translate: {Default: 'Contact us'} }}
+      Contact us
     </a>
   </div>
   <!--end::Nav-->
