--- a/src/app/pages/_layout/components/header-mobile/header-mobile.component.html
+++ b/src/app/pages/_layout/components/header-mobile/header-mobile.component.html
@@ -1,5 +1,5 @@
 <!--begin::Logo-->
-<a href="http://ecrin.org" target="_blank">
+<a href="https://www.eosc-life.eu/" target="_blank">
 	<img alt="Logo" [attr.src]="headerLogo" style="width: 100px; height: 37px;
                margin-top: 1px !important;
                margin-left: -6px !important;" />
@@ -7,7 +7,7 @@
 <!--end::Logo-->
 <div style="margin-top: 5px !important;">
 
-  <h3 style="color: #315492 !important; margin-bottom: -0.5px !important;">MDR Web portal</h3>
+  <h3 style="color: #315492 !important; margin-bottom: -0.5px !important;">The Toolbox portal</h3>
 
   <span style="color: #eb675e !important; font-weight: 900 !important;">{{status}}</span>
 </div>
