--- a/src/app/pages/_layout/components/header/header.component.html
+++ b/src/app/pages/_layout/components/header/header.component.html
@@ -20,7 +20,7 @@
       <ng-container *ngIf="!asideSelfDisplay">
         <!--begin::Header Logo-->
         <div class="header-logo">
-          <a href="http://ecrin.org" target="_blank">
+          <a href="https://www.eosc-life.eu/" target="_blank">
             <img alt="Logo" [attr.src]="headerLogo" style="width: 120px; height: 45px;" />
           </a>
         </div>
