--- a/src/app/_portal/partials/content/portal/search-panel/search-panel.component.html
+++ b/src/app/_portal/partials/content/portal/search-panel/search-panel.component.html
@@ -13,124 +13,28 @@
                         [(ngModel)]="selectedOption"
                         (change)="onChangeSelectMode(selectMode.value)"
                 >
-                  <option value="study_characteristics" [translate]="'SEARCH-PANEL.STUDY-CHARACTERISTICS.TITLE'">
-                    {{'SEARCH-PANEL.STUDY-CHARACTERISTICS.TITLE' | translate}}
+                  <option value="title" [translate]="'Title'">
+                    Title
                   </option>
-                  <option value="specific_study" [translate]="'SEARCH-PANEL.SPECIFIC-STUDY.TITLE'">
-                    {{'SEARCH-PANEL.SPECIFIC-STUDY.TITLE' | translate}}
-                  </option>
-                  <option value="via_published_paper">
-                    {{'SEARCH-PANEL.VIA-PUBLISHED-PAPER.TITLE' | translate}}
+                  <option value="doi" [translate]="'DOI'">
+                    DOI
                   </option>
                 </select>
               </div>
             </div>
 
 
-            <!-- Study characteristic search form -->
-            <ng-container *ngIf="selectedOption === 'study_characteristics'">
-              <div class="col-xl-3">
-                <div class="form-group">
-                  <input type="text" class="form-control"
-                         name="titleContains" #titleContains
-                         ngModel
-                         placeholder="{{'SEARCH-PANEL.STUDY-CHARACTERISTICS.TITLE-CONTAINS' | translate}}"
-                         style="border-color: #d9d9d9 !important;"
-                  />
-                </div>
+            <!-- Search value of the search form -->
+            <div class="col-xl-3">
+              <div class="form-group">
+                <input type="text" class="form-control"
+                       name="titleContains" #searchValue
+                       ngModel
+                       placeholder="{{'SEARCH-PANEL.STUDY-CHARACTERISTICS.TITLE-CONTAINS' | translate}}"
+                       style="border-color: #d9d9d9 !important;"
+                />
               </div>
-
-              <div class="col-xl-2">
-                <div class="form-group">
-                  <select name="logicOperator" class="form-control"
-                          #logicOperator
-                          [(ngModel)]="logicOperatorDefault"
-                          ngbTooltip="{{'SEARCH-PANEL.STUDY-CHARACTERISTICS.LOGICAL-OPERATOR' | translate}}" placement="auto"
-                          style="border-color: #d9d9d9 !important;"
-                  >
-                    <option value="and" [translate]="'SEARCH-PANEL.STUDY-CHARACTERISTICS.AND'">
-                      {{'SEARCH-PANEL.STUDY-CHARACTERISTICS.AND' | translate}}
-                    </option>
-                    <option value="or" [translate]="'SEARCH-PANEL.STUDY-CHARACTERISTICS.OR'">
-                      {{'SEARCH-PANEL.STUDY-CHARACTERISTICS.OR' | translate}}
-                    </option>
-                  </select>
-                </div>
-              </div>
-
-              <div class="col-xl-3">
-                <div class="form-group">
-                  <input type="text" class="form-control" name="topicIncludes"
-                         #topicIncludes
-                         ngModel
-                         placeholder="{{'SEARCH-PANEL.STUDY-CHARACTERISTICS.TOPIC-INCLUDES' | translate}}"
-                         style="border-color: #d9d9d9 !important;"
-                  />
-                </div>
-              </div>
-            </ng-container>
-
-
-            <!-- Specific study search form -->
-            <ng-container *ngIf="selectedOption === 'specific_study'">
-              <div class="col-xl-3">
-                <div class="form-group">
-                  <select name="specificStudySelect" class="form-control" style="margin-left: 3px !important; border-color: #d9d9d9 !important;"
-                          #specificStudySelect
-                          [(ngModel)]="specificStudySelectDefault"
-                          ngbTooltip="{{'SEARCH-PANEL.SPECIFIC-STUDY.STUDY-ID-TYPE' | translate}}" placement="auto"
-                  >
-                    <option value="11">Trial Registry ID</option>
-                    <option value="13">Funder's ID</option>
-                    <option value="14">Sponsor's ID</option>
-                    <option value="39">NIH CTRP ID</option>
-                    <option value="42">NHLBI ID</option>
-                  </select>
-                </div>
-              </div>
-
-              <div class="col-xl-5">
-                <div class="form-group">
-                  <input type="text" class="form-control" name="specificStudyValue"
-                         #specificStudyValue
-                         ngModel
-                         placeholder="{{'SEARCH-PANEL.SPECIFIC-STUDY.SPECIFIC-STUDY-PARAMETER' | translate}}"
-                         style="border-color: #d9d9d9 !important;"
-                  />
-                </div>
-              </div>
-            </ng-container>
-
-
-
-            <!-- Via published paper search form -->
-            <ng-container *ngIf="selectedOption === 'via_published_paper'">
-              <div class="col-xl-3">
-                <div class="form-group">
-                  <select name="viaPublishedPaperSelect" class="form-control" style="margin-left: 3px !important; border-color: #d9d9d9 !important;"
-                          #viaPublishedPaperSelect
-                          [(ngModel)]="viaPublishedPaperSelectDefault"
-                          ngbTooltip="{{'SEARCH-PANEL.VIA-PUBLISHED-PAPER.SEARCH-PAPER-BY' | translate}}" placement="auto"
-                  >
-                    <option value="doi">DOI</option>
-                    <option value="title">
-                      {{'SEARCH-PANEL.VIA-PUBLISHED-PAPER.SEARCH-BY-TITLE' | translate}}
-                    </option>
-                  </select>
-                </div>
-              </div>
-
-              <div class="col-xl-5">
-                <div class="form-group">
-                  <input type="text" class="form-control" name="viaPublishedPaperValue"
-                         #viaPublishedPaperValue
-                         ngModel
-                         placeholder="{{'SEARCH-PANEL.VIA-PUBLISHED-PAPER.INTERESTED-PAPER-PARAMETER' | translate}}"
-                         style="border-color: #d9d9d9 !important;"
-                  />
-                </div>
-              </div>
-            </ng-container>
+            </div>
 
 
             <div class="row" style="margin-left: 5px !important;">
@@ -146,7 +50,8 @@
                 </button>
               </div>
 
-              <a href="http://ecrin-mdr.online/index.php/Portal_User_Guide"
+              <a href="#"
+                 target="_blank"
                 ngbTooltip="{{'TOOLTIPS.HELP-PAGE' | translate}}"
                 class="fa fa-question-circle"
                 style="position: absolute; top: 8px;
