--- a/src/app/pages/_layout/components/header/header-menu/header-menu.component.html
+++ b/src/app/pages/_layout/components/header/header-menu/header-menu.component.html
@@ -1,7 +1,7 @@
 <div style="margin-left: 20px !important; margin-top: 7px !important;">
 
   <h1 style="color: #315492 !important; margin-bottom: -0.5px !important;">
-    MDR web-portal
+    The Toolbox portal
   </h1>
 
   <span style="color: #eb675e !important; font-weight: 900 !important; margin-left: 1px !important;">
