--- a/src/assets/sass/components/_variables.demo.scss
+++ b/src/assets/sass/components/_variables.demo.scss
@@ -6,17 +6,17 @@
 
 // Theme colors
 // Override primary color variants
-// $primary:       									#3699FF;
-// $primary-hover:    									#187DE4;
-// $primary-light:    									#E1F0FF;
-// $primary-inverse:  									#FFFFFF;
+$primary:       									#3699FF;
+$primary-hover:    									#187DE4;
+$primary-light:    									#E1F0FF;
+$primary-inverse:  									#FFFFFF;
 
 
 // ECRIN primary colors
-$primary:       									#315492;
-$primary-hover:    									#224482; // Custom variable
-$primary-light:    									#E1F0FF; // Custom variable
-$primary-inverse:  									#FFFFFF;  // Custom variable
+// $primary:       									#315492;
+// $primary-hover:    									#224482; // Custom variable
+// $primary-light:    									#E1F0FF; // Custom variable
+// $primary-inverse:  									#FFFFFF;  // Custom variable
 
 // Danger - darker
 $danger:  #d0451b;
