--- a/src/app/_portal/partials/content/portal/main-page-content.component.html
+++ b/src/app/_portal/partials/content/portal/main-page-content.component.html
@@ -9,7 +9,7 @@
   <ng-container *ngIf="!loading; else loadingBlock">
     <p *ngIf="total > 0 && !loading">
       <ngb-alert [dismissible]="false" [type]="'success'">
-        <strong [translate]="'SEARCH-PAGE.RESULTS'">Results: </strong> {{startFrom}} - {{onPage}} <span [translate]="">of</span> {{total}}.
+        <strong [translate]="'SEARCH-PAGE.RESULTS'">Results: </strong> {{startOnPage}} - {{endOnPage}} <span [translate]="">of</span> {{total}}.
       </ngb-alert>
     </p>
     <p *ngIf="(total <= 0 || total === null) && !loading">
@@ -19,23 +19,14 @@
     </p>
     <app-filters-list></app-filters-list>
     <ng-container *ngIf="pageSlice && (pageSlice !== null && pageSlice !== undefined)">
-      <ng-container *ngFor="let study of pageSlice">
-        <app-study-expanding
-          [studyId]="study.id"
-          [studyTitle]="study.displayTitle"
-          [studyDescription]="study.briefDescription"
-          [studyStatus]="study.studyStatus"
-          [studyType]="study.studyType"
-          [provenance]="study.provenanceString"
-          [dataSharingStatement]="study.dataSharingStatement"
-          [dataObjects]="study.linkedDataObjects"
-        ></app-study-expanding>
-        <!--<app-study-card
-          [studyId]="study.id"
-          [studyTitle]="study.displayTitle"
-          [studyDescription]="study.briefDescription"
-          [provenance]="study.provenanceString"
-        ></app-study-card>-->
+      <ng-container *ngFor="let res of pageSlice">
+        <app-resource-card
+          [id]="res.id"
+          [resourceTitle]="res.title"
+          [doi]="res.doi"
+          [authors]="res.authors"
+          [abstract]="res.abstract"
+        ></app-resource-card>
       </ng-container>
     </ng-container>
     <ng-container *ngIf="total > 0 && !loading">
