--- a/src/app/_portal/partials/content/portal/resource-card/resource-card.component.html
+++ b/src/app/_portal/partials/content/portal/resource-card/resource-card.component.html
@@ -9,24 +9,36 @@
           </a>
         </mat-card-title>
         <mat-card-subtitle
-          *ngIf="doi !== null && doi !== undefined"
+          *ngIf="authors !== null && authors !== undefined"
         >
-          {{doi}}
+          Authors: {{authors}}
         </mat-card-subtitle>
       </mat-card-header>
       <mat-divider></mat-divider>
       <mat-card-content>
-        <p
-           class="mt-5 mb-1 mr-5 ml-5"
-           align="justify"
-           style="font-size: 1.1em !important;"
-           *ngIf="description !== null && description !== undefined"
-        >
-          <!--<strong>{{'SEARCH-PAGE.STUDY.DESCRIPTION' | translate: {Default: 'Study description'} }}</strong><br />-->
-          {{(showMore) ? description : description | slice:0:150}} <span *ngIf="!showMore"> ...</span>
-          <a href="javascript:;" *ngIf="!showMore" (click)="showMoreToggle()">{{'SEARCH-PAGE.SHOW-MORE' | translate: {Default: '[Show More]'} }}</a>
-          <a href="javascript:;" *ngIf="showMore" (click)="showMoreToggle()">{{'SEARCH-PAGE.SHOW-LESS' | translate: {Default: '[Show Less]'} }}</a>
-        </p>
+        <ng-container *ngIf="abstract !== null && abstract !== undefined">
+          <p
+            class="mt-5 mb-1 mr-5 ml-5"
+            align="justify"
+            style="font-size: 1.1em !important;"
+            *ngIf="abstract.trim() !== ''"
+          >
+            <!--<strong>{{'SEARCH-PAGE.STUDY.DESCRIPTION' | translate: {Default: 'Study description'} }}</strong><br />-->
+            {{(showMore) ? abstract : abstract | slice:0:150}} <span *ngIf="!showMore"> ...</span>
+            <a href="javascript:;" *ngIf="!showMore" (click)="showMoreToggle()">{{'SEARCH-PAGE.SHOW-MORE' | translate: {Default: '[Show More]'} }}</a>
+            <a href="javascript:;" *ngIf="showMore" (click)="showMoreToggle()">{{'SEARCH-PAGE.SHOW-LESS' | translate: {Default: '[Show Less]'} }}</a>
+          </p>
+
+          <p
+            class="mt-5 mb-1 mr-5 ml-5"
+            align="justify"
+            style="font-size: 1.1em !important;"
+            *ngIf="abstract.trim() === ''"
+          >
+            No abstracts.
+          </p>
+        </ng-container>
+
       </mat-card-content>
     </mat-card>
 
