--- a/src/app/pages/_layout/components/footer/footer.component.html
+++ b/src/app/pages/_layout/components/footer/footer.component.html
@@ -26,24 +26,16 @@
       >EOSC-Life Web site</a
     >
     <a
-      href="#"
-      target="_blank"
-      class="nav-link pl-0 pr-5"
-      >
-      WP Page
-    </a>
+            href="#"
+            target="_blank"
+            class="nav-link pl-0 pr-5"
+    >Project description</a
+    >
     <a
       href="#"
       target="_blank"
       class="nav-link pl-0 pr-5"
     >Disclaimer
-    </a>
-    <a
-      href="#"
-      target="_blank"
-      class="nav-link pl-0 pr-5"
-    >
-      Sources and Contributors
     </a>
     <a
       href="#"
