--- a/src/app/_portal/partials/layout/splash-screen/splash-screen.component.html
+++ b/src/app/_portal/partials/layout/splash-screen/splash-screen.component.html
@@ -1,9 +1,9 @@
 <!-- splash screen -->
 <div #splashScreen id="splash-screen">
-  <img src="./assets/media/logos/ecrin-logo-splash.jpg" alt="Logo"
-       style="width: 215px; height: 85px;"
+  <img src="https://www.eosc-life.eu/wp-content/themes/eosc-life-v2/assets/images/eosclogo.png" alt="Logo"
+       style="width: 115px; height: 85px;"
   />
-  <h2>MetaData Repository</h2>
+  <h2>Sensitive data toolbox</h2>
   <svg class="splash-spinner" viewBox="0 0 50 50">
     <circle
       class="path"
