--- a/src/app/_portal/partials/content/portal/search-panel/search-panel.component.html
+++ b/src/app/_portal/partials/content/portal/search-panel/search-panel.component.html
@@ -46,7 +46,7 @@
                 </button>
               </div>
 
-              <a href="#"
+              <a href="https://docs.google.com/document/d/1qcprjPSWs1PD1F1LeUgC73YOVEKLNwm8oxyhc3MNfyQ/edit?usp=sharing"
                  target="_blank"
                 ngbTooltip="{{'TOOLTIPS.HELP-PAGE' | translate}}"
                 class="fa fa-question-circle"
