--- a/src/app/pages/_layout/components/footer/footer.component.html
+++ b/src/app/pages/_layout/components/footer/footer.component.html
@@ -26,19 +26,19 @@
       >EOSC-Life Web site</a
     >
     <a
-            href="#"
+            href="https://docs.google.com/document/d/1U_SMw1SIAu3J0gdSxNYO3UJR3CQdRI-LBj7xvDcsq8Y/edit?usp=sharing"
             target="_blank"
             class="nav-link pl-0 pr-5"
     >Project description</a
     >
     <a
-      href="#"
+      href="https://docs.google.com/document/d/1n7wlju0ctE7_vB58iBshWYQ-BCAp47tPUXKBvtUsVOg/edit?usp=sharing"
       target="_blank"
       class="nav-link pl-0 pr-5"
     >Disclaimer
     </a>
     <a
-      href="#"
+      href="https://docs.google.com/document/d/1iDQnH3v1Rdk6M2Z5w1I9i0MNnMcxgHCK5pAYWTTOLVk/edit?usp=sharing"
       target="_blank"
       class="nav-link pl-0 pr-0"
       >
