--- a/src/app/pages/_layout/components/header/header-menu/header-menu.component.html
+++ b/src/app/pages/_layout/components/header/header-menu/header-menu.component.html
@@ -1,8 +1,11 @@
 <div style="margin-top: 7px !important;">
 
-  <h1 style="color: #187DE4 !important; margin-bottom: -0.5px !important;">
-    Sensitive data toolbox
-  </h1>
+  <h2 style="color: #187DE4 !important;
+    margin-bottom: -0.5px !important;
+    margin-top: 3px;"
+  >
+    Toolbox for sensitive data objects
+  </h2>
 
   <span style="color: #eb675e !important; font-weight: 900 !important; margin-left: 1px !important;">
     {{status}}
