--- a/src/app/pages/_layout/components/header/header.component.html
+++ b/src/app/pages/_layout/components/header/header.component.html
@@ -21,7 +21,7 @@
         <!--begin::Header Logo-->
         <div class="header-logo">
           <a href="https://www.eosc-life.eu/" target="_blank">
-            <img alt="Logo" [attr.src]="headerLogo" style="width: 60px; height: 45px;" />
+            <img alt="Logo" [attr.src]="headerLogo" style="width: 60px; height: 50px; margin-top: -3px !important;" />
           </a>
         </div>
         <!--end::Header Logo-->
